--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,9 @@
+@import "./abstracts/mixin";
+@import "./abstracts/variable";
+
+
+@import "./layout/navbar";
+
 @import "./themes/theme";
+
+@import "./base/base"
