--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --font-base: "DM Sans", sans-serif;
+  --font-base: "Georgia", sans-serif;
 
   --primary-color: #edf2f8;
   --secondary-color: #313bac;
@@ -17,4 +17,4 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
-}
+} */
