--- a/src/sass/abstracts/_variable.scss
+++ b/src/sass/abstracts/_variable.scss
@@ -1,4 +1,11 @@
-// COLOR
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
+$font-base: "DM Sans", sans-serif;
+
+$secondary-color: #313bac;
+$primary-color: #edf2f8;
+$black-color: #030303;
+$lightGray-color: #e4e4e4;
+$gray-color: #6b7688;
+$brown-color: #46364a;
+$white-color: #ffffff;
