--- a/src/sass/abstracts/_variable.scss
+++ b/src/sass/abstracts/_variable.scss
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;900&family=Poppins:wght@400;500&display=swap");
 
 $font-base: "DM Sans", sans-serif;
+$font-logo: "Poppins", sans-serif;
+$font-logo-2: "Playfair Display SC", serif;
 
 $secondary-color: #313bac;
 $primary-color: #edf2f8;
