--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,11 @@
 @import "./abstracts/mixin";
 @import "./abstracts/variable";
 
-
 @import "./layout/navbar";
 @import "./layout/header";
+@import "./layout/about";
 
 @import "./themes/theme";
 
-@import "./base/base"
+@import "./base/base";
+@import "./base/utilities"
