--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,7 +9,7 @@
 
 html {
   font-size: 62.5%;
-  //900 - 1200px
+  // //900 - 1200px
   // @include respond(tab-land) {
   //   font-size: 56.25%;
   // }
@@ -31,7 +31,7 @@ html {
 body {
   font-family: $font-base;
   //   font-weight: 400;
-  // font-size: 2.5rem;
+  // font-size: 1.5rem;
   //   line-height: 1.7;
   color: $black-color;
   //   margin: 3rem;
