--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -56,6 +56,7 @@
       }
 
       a {
+        font-size: 2rem;
         color: $gray-color;
         text-decoration: none;
         text-transform: uppercase;
@@ -153,6 +154,7 @@
         a {
           color: $gray-color;
           text-decoration: none;
+
           font-size: 2rem;
           text-transform: uppercase;
           font-weight: 500;
