--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./layout/navbar";
 @import "./layout/header";
 @import "./layout/about";
+@import "./layout//work";
 
 @import "./themes/theme";
 
