--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -29,6 +29,7 @@ html {
 }
 
 body {
+  background-color: $primary-color;
   font-family: $font-base;
   //   font-weight: 400;
   // font-size: 1.5rem;
