--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,8 @@
 @import "./layout/navbar";
 @import "./layout/header";
 @import "./layout/about";
-@import "./layout//work";
+@import "./layout/work";
+@import "./layout/skills";
 
 @import "./themes/theme";
 
