--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,6 +1,3 @@
-.app {
-  background-color: $primary-color;
-}
 
 //   .app__whitebg {
 //     background-color: var(--white-color);
@@ -9,7 +6,6 @@
 //   .app__primarybg {
 //     background-color: var(--primary-color);
 //   }
-
 
 // TODO: Recheck font size
 .app__container {
@@ -52,6 +48,39 @@
 //     }
 //   }
 
+.resume-button {
+  margin-top: 0.8rem;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+
+  &:hover {
+    background-color: #23c483;
+    box-shadow: 0px 15px 20px $secondary-color;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  &:active {
+    transform: translateY(-1px);
+  }
+
+  a {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: $black-color;
+    text-decoration: none;
+    line-height: 1.5;
+    border: solid 0.2rem #000;
+    padding: 0.3rem 0.5rem;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: $secondary-color;
+      color: #fff !important;
+    }
+  }
+}
+
 .head-text {
   font-size: 2.75rem;
   font-weight: 800;
@@ -73,7 +102,7 @@
 }
 
 .p-text {
-  font-size: 1.7 rem;
+  font-size: 1.5rem;
   list-style: none;
   text-align: left;
   color: $gray-color;
@@ -104,16 +133,17 @@
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 3rem;
 
   padding: 1rem;
 
   div {
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
-    background-color: var(--white-color);
+    background-color: $white-color;
     margin: 0.25rem 0;
-    border: 1px solid var(--lightGray-color);
+    border: 1px solid $lightGray-color;
 
     display: flex;
     justify-content: center;
@@ -122,17 +152,17 @@
     transition: all 0.3s ease-in-out;
 
     svg {
-      width: 15px;
-      height: 15px;
-      color: var(--gray-color);
+      width: 1.5rem;
+      height: 1.5rem;
+      color: $gray-color;
     }
 
     &:hover {
-      background-color: var(--secondary-color);
-      border-color: var(--secondary-color);
+      background-color: $secondary-color;
+      border-color: $secondary-color;
 
       svg {
-        color: var(--white-color);
+        color: $white-color;
       }
     }
 
