--- a/src/sass/layout/_skills.scss
+++ b/src/sass/layout/_skills.scss
@@ -1,10 +1,12 @@
 .skills {
-  flex: 1;
+  // flex: 1;
   width: 100%;
   flex-direction: column;
 
   &__container {
-    width: 80%;
+    // width: 80%;
+    width: 100%;
+
 
     display: flex;
     flex-direction: column;
@@ -21,7 +23,7 @@
       justify-content: center;
       align-items: center;
 
-      margin-right: 5rem;
+      // margin-right: 5rem;
 
       @media screen and (max-width: 900px) {
         margin-right: 0;
