--- a/src/sass/layout/_work.scss
+++ b/src/sass/layout/_work.scss
@@ -6,7 +6,7 @@
 // }
 
 .work {
-  flex: 1;
+  // flex: 1;
   width: 100%;
   flex-direction: column;
 
@@ -143,7 +143,7 @@
       padding: 0.5rem 1rem;
       border-radius: 1rem;
       background-color: #fff;
-      top: -1.5rem;
+      top: -2rem;
     }
 
     &-icon-container {
