--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -72,7 +72,7 @@
       object-fit: contain;
       z-index: 1;
 
-      @media screen and (max-width: 600px){
+      @media screen and (max-width: 600px) {
         width: 100%;
       }
     }
@@ -86,7 +86,7 @@
       width: 90%;
       height: 100%;
 
-      @media screen and (max-width: 1200px){
+      @media screen and (max-width: 1200px) {
         left: -0.1rem;
         margin: -2rem 0;
         width: 100%;
@@ -126,11 +126,50 @@
 
   p {
     width: 100%;
-    // text-transform: uppercase;
   }
 
   //   @media screen and (max-width: 1200px) {
   //     justify-content: flex-start;
   //     align-items: flex-start;
   //   }
+}
+
+.project-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 1rem 2rem;
+
+  border-radius: 1.5rem;
+
+  font-size: 1.6rem;
+  margin-top: 2rem;
+
+  cursor: pointer;
+
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+
+  &:hover {
+    background-color: $secondary-color;
+    box-shadow: 0px 15px 20px $secondary-color;
+    color: $white-color;
+    transform: translateY(-7px);
+  }
+
+  &:active {
+    transform: translateY(-1px);
+  }
+
+  a {
+    text-decoration: none;
+    color: $black-color;
+    font-weight: 500;
+    margin-right: 1.5rem;
+
+    &:hover {
+      color: $white-color !important;
+    }
+  }
 }
