--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,4 +1,3 @@
-
 //   .app__whitebg {
 //     background-color: var(--white-color);
 //   }
@@ -54,7 +53,6 @@
   transition: all 0.3s ease 0s;
 
   &:hover {
-    background-color: #23c483;
     box-shadow: 0px 15px 20px $secondary-color;
     color: #fff;
     transform: translateY(-7px);
@@ -102,6 +100,9 @@
 }
 
 .p-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.5rem;
   list-style: none;
   text-align: left;
@@ -208,9 +209,8 @@
   }
 }
 
-@media screen and (max-width: 500px) {
-  .app__navigation,
-  .app__social {
+@media screen and (max-width: 800px) {
+  .app__navigation {
     display: none;
   }
 
