--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./layout/about";
 @import "./layout/work";
 @import "./layout/skills";
+@import "./layout/footer";
 
 @import "./themes/theme";
 
