--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -210,7 +210,8 @@
 }
 
 @media screen and (max-width: 800px) {
-  .app__navigation {
+  .app__navigation,
+  .app__social {
     display: none;
   }
 
